- Implemented using Win64 plugins in all Win64 system, even if you run Win32 version of FileOptimizer.
- Added removing metadata in pngquant if PNGCopyMetadata is disabled.
- Reenabled Leanify in JPEG processing when Copy Metadata is enabled, because now we can use --jpeg-keep-all-metadata.
- Updated libwebp to 0.5.2.
- Updated UPX to 3.92.
- Updated Leanify to 0.4.3.173 daily binaries.
- Updated pngquant to 2.8.0.
- Updated to mutool 1.10a with x64 native build (thanks Dirk Paehl).
- Updated ImageMagick 7.0.4.0 with HDRI support.
- Better performance updating to ASMLib 2.51 with AVX512 support.
- Updated to NSIS 3.01.



9.30 - 2016/11/26
- Installer now supports the /AllUsers argument to install for all users instead of current user (Grahame Bevan).
- Fixed remove selected files (Shift-Del) always enabled since 9.00 when unified ribbon and regular UI (TPS).
- Added original and optimized sizes in log file (JoeW).
- Fixed a bug in mutool that prevented execution on PDF (LeTiger).
- Disabled Leanify from the JPEG, PNG and ICO toolchains when copy metadata is enabled, because it removed IPTC information (ZonaCasio).
- Updated AdvanceCOMP to 1.23.
- Updated to ECT 0.6.2.0 -511fa96- x86 and x64 optimized builds (thanks Malloc Voidstar).
- Updated jsmin custom build with Visual C++ 2015.
- Updated Leanify to 0.4.3.172 daily binaries.
- Updated ImageMagick 7.0.3.7 with HDRI support.
- Updated PngOptimizer to 2.5.
- Updated Ghostscript to 9.20.
- Updated strip to 2.27.
- Updated to mutool 1.10RC2.
- Better performance updating to ASMLib 2.50 with AVX512 support.
- Updated to cppcheck 1.76.
- Upgraded distributions to 7-Zip 16.04.
- Some minor optimizations and code cleanup.

9.20 - 2016/10/01
- Added INI setting JSAdditionalExtensions to add extra extensions to be threated as JSON (Oddbrother).
- Implemented several UPX compression profiles depending on optimization level (User Hunter).
- Updated ImageMagick 7.0.3.1 with HDRI support.